[ux] Fixed the alignment

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -27,10 +27,10 @@ body {
   background-position: 0;
   background-size: cover;
 }
-  .overwatch h1 { text-shadow: 1px 1px #000 }
+  .overwatch h1 { text-shadow: 1px 1px #000; text-decoration: uppercase; text-align: right }
 
 .destiny {
   background-image: url(https://i.imgur.com/kxP4DEU.jpg);
   background-size: cover;
 }
-  .destiny h1 { text-shadow: 1px 1px #000 }
+  .destiny h1 { text-shadow: 1px 1px #000; text-decoration: uppercase; text-align: right }
